Bug 820566 - DMD: Improve testing by using a script to filter out platform-specific stuff in the output.  r=jlebar.